@@ -6,6 +6,9 @@ Version 0.9.3 -> 0.9.4
 * fix 2.5.x build
 * remove lots of 'dead' includes from zoran_driver.c
 * change i2c client usecounting to what's used in 2.5.x (non-dynamic)
+* remove DataErr from the zr36060 IRQ Mask, this autoresets the chip when
+    it loses sync, which means we don't get a timeout. Much better than
+    all the manual restart handling (which only worked partly).
 
 Version 0.9.2 -> 0.9.3
 ----------------------
